<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_beranda" />

    <item
        android:id="@+id/navigation_aslilokal"
        android:icon="@drawable/ic_kelola_product"
        android:title="@string/title_asli_lokal" />

    <item
        android:id="@+id/navigation_pesanan"
        android:icon="@drawable/ic_pesanan"
        android:title="@string/title_pesanan" />

    <item
        android:id="@+id/navigation_keranjang"
        android:icon="@drawable/ic_keranjang"
        android:title="@string/title_keranjang" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profil" />

</menu>